         +3 protected disks with unusual track lengths (long, short and 0
         length) (part of patch #1882836) (Gergely Szasz).
20080315 disk/disk.c: write_log() fix (part of patch #1882836) (Gergely Szasz).
20080315 disk/fdd.c: set the write protect flag if there is no disk in the
         drive (part of patch #1882836) (Gergely Szasz).
20080315 disk/beta.c: support for Beta 128 custom ROMs in snapshots
         (patch #1844606) (Stuart).
20080315 disk/{fdd.c,wd_fdc.c}: make disk timing more accruate - improve
         emulation of head actions when null actions are performed, improve
         spin duration calculation, turn off motor and set status to not ready
         on head unload, add emulation of finding and reading the address mark
         id and make timeout reset DRQ (fixes bug #1910395) (patch #1913785)
         (Gergely Szasz).
20080315 Makefile.am,configure.in,fuse.c,unittests/{Makefile.am,unittests.[ch]}:
	 add beginnings of unit testing framework.
20080316 fuse.c,configure.in,settings.dat: make unit testing framework a 
	 run-time rather than build-time option.
20080317 disk/disk.c: add support for some alternate DSK headers (part of patch
         #1882836) (Gergely Szasz).
20080317 disk/disk.c: fix max track length problem with Turbo outrun side B
         (part of patch #1882836) (Gergely Szasz).
20080317 machines/{pentagon.c,pentagon.h,pentagon1024.c,pentagon512.c,
	 scorpion.c,spec128.c,spec128.h,spec16.c,spec48.c,spec48.h,spec_se.c,
	 specplus2.c,specplus2a.c,specplus3.c,specplus3.h,specplus3e.c,tc2048.c,
	 tc2068.c,tc2068.h,ts2068.c},spectrum.c,spectrum.h,
	 unittests/unittests.c: refactor contention functions. Changes TS2068
	 contention such that it starts 1 tstate before the top-left pixel is
	 displayed rather than 16, which must be wrong as we then get
	 uncontended accesses at the end of each line.
20080317 windres.rc,ui/win32/{win32ui.c,roms.{c,h,rc},Makefile.am}: Win32:
	 implementation of the ROM selection dialog (Marek).