@@ -2553,3 +2553,6 @@
 	 uncontended accesses at the end of each line.
 20080317 windres.rc,ui/win32/{win32ui.c,roms.{c,h,rc},Makefile.am}: Win32:
 	 implementation of the ROM selection dialog (Marek).
+20080318 unittests/unittests.c: add floating bus unit test. Currently fails
+	 on the Pentagon 512, but I'm convinced that's a copy-and-paste error
+	 in the Pentagon 512 code.
